[package]
name = "decay"
version = "0.1.0"
authors = ["Bruno Paulino <hi@bpaulino.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "decay"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
rust-s3 = "0.33.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
futures = "0.3.30"
openssl = { version = "0.10.64", features = ["vendored"] }
once_cell = "1.19.0"

[dev-dependencies]
reqwest = "0.11.23"

[profile.release]
strip = true # Automatically strip symbols from the binary to reduce binary size
