[package]
name = "decay"
edition = "2024"
rust-version = "1.89"
version = "0.0.0"
authors = ["Bruno Paulino <hi@bpaulino.com>"]
license = "MIT"
repository = "https://github.com/brunojppb/turbo-cache-server"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "decay"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
rust-s3 = "0.37"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.32"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "http-json",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
  "semconv_experimental",
] }
sysinfo = "0.37"
tonic = "0.14.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
reqwest = "0.13"
wiremock = "0.6"


[profile.release]
# For more details on smaller binary size, see:
# https://github.com/johnthagen/min-sized-rust/blob/094d314f0c28f7e4bffeb0b0258f71cb303bd91a/README.md
strip = true    # Automatically strip symbols from the binary to reduce binary size
opt-level = "z" # Optimize for size.
lto = true
